Added commented staging and product parameters
SVN-Revision: 9464

--- a/build.properties
+++ b/build.properties
@@ -1,8 +1,18 @@
+# NCICB DEV
 database.jndi.name=calab-dev
-
-hostname=calab-dev
+#hostname=calab-dev
+hostname=cbiovdev5019:49080/caNanoLab
 contextPath=calab
-
 file.repository.dir=/local/content/calab
 
+#staging
+#database.jndi.name=calab-staging
+#hostname=calabdev.abcc.ncifcrf.gov:8080
+#contextPath=calab
+#file.repository.dir=/home/calab.abcc/data
 
+#production
+#database.jndi.name=calab
+#hostname=calab.abcc.ncifcrf.gov:8080
+#contextPath=calab
+#file.repository.dir=/home/calab.abcc/data
