modified calab to be caNanoLab
SVN-Revision: 9471

--- a/fileupload.properties
+++ b/fileupload.properties
@@ -1,6 +1,6 @@
 # For File input and output
 # Directory for storing caNanoLab data files 
-fileRepositoryDir=C:\\temp\\calab\\fileupload\\
+fileRepositoryDir=C:\\temp\\caNanoLab\\fileupload\\
 # Directory for storing caNanoLab files
 
 #Directory for storing uploaded particle files
@@ -9,10 +9,10 @@ particleFileRepositoryDir=
 
 
 # Properties for HTTP-based file upload 
-archiveValue=http://localhost:8080/calab/workflow/SignedHttpUploadApplet.jar
-servletURL=http://localhost:8080/calab/processFileUpload
-notifyURL=http://localhost:8080/calab/fileUpload.do?dispatch=persistFileUploadData
-defaultURL=http://localhost:8080/calab/workflowMessage.do
+archiveValue=http://localhost:8080/caNanoLab/workflow/SignedHttpUploadApplet.jar
+servletURL=http://localhost:8080/caNanoLab/processFileUpload
+notifyURL=http://localhost:8080/caNanoLab/fileUpload.do?dispatch=persistFileUploadData
+defaultURL=http://localhost:8080/caNanoLab/workflowMessage.do
 
 
 # Properties to specify what file extensions are allowed for each type. They must be in upercase.
