Changed the data souce name to caNanoLab-dev
SVN-Revision: 2736

--- a/build.properties
+++ b/build.properties
@@ -1,6 +1,5 @@
 # NCICB DEV
-database.jndi.name=calab-dev
-#hostname=calab-dev
+database.jndi.name=caNanoLab-dev
 hostname=cbiovdev5019:49080/caNanoLab
 contextPath=calab
 file.repository.dir=/local/content/calab
