--- a/fileupload.properties.template
+++ b/fileupload.properties.template
@@ -1,6 +1,6 @@
 # For File input and output
 # Directory for storing caLAB data files 
-#fileRepositoryDir=C:\\temp\\calab\\fileupload\\
+#fileRepositoryDir=C:\\temp\\caNanoLab\\fileupload\\
 fileRepositoryDir=@FILE_REPOSITORY_DIR@/workflowdata
 
 # Directory for storing caLAB files
