added validation messages for createSample
SVN-Revision: 9497

--- a/gov/nih/nci/calab/resources/inventory.properties
+++ b/gov/nih/nci/calab/resources/inventory.properties
@@ -10,6 +10,7 @@ createSampleForm.sampleNamePrefix=Sample ID prefix
 createSampleForm.dateReceived=The date received
 createSampleForm.sampleType=Sample Type
 createSampleForm.sampleSource=Source
+createSampleForm.otherSampleSource=Other sample source
 createSampleForm.lotId=Lot ID
 createSampleForm.numberOfContainers=The number of containers
 createSampleForm.containerType=Container type
@@ -23,6 +24,10 @@ createSampleForm.concentrationUnit=The container concentration unit
 createSampleForm.volumeUnit=The container volume unit
 createSampleForm.solventConcentration=When solvent is entered, concentration
 createSampleForm.concentrationSolvent=When concentration is entered, solvent
+createSampleForm.otherRoom=Other Room
+createSampleForm.otherFreezer=Other Freezer
+createSampleForm.otherShelf=Other Shelf
+createSampleForm.otherBox=Other Box
 error.preCreateSample=Error in loading the Create Sample page: {0}.
 error.createSample=Error in saving the sample: {0}.
 error.createSample.duplicate=Error in saving the sample: {0}.
