added validation messages for createAliquotForm and editAliquotForm
SVN-Revision: 9507

--- a/gov/nih/nci/calab/resources/inventory.properties
+++ b/gov/nih/nci/calab/resources/inventory.properties
@@ -48,6 +48,10 @@ createAliquotForm.concentrationUnit=The container concentration unit
 createAliquotForm.volumeUnit=The container volume unit
 createAliquotForm.solventConcentration=When solvent is entered, concentration
 createAliquotForm.concentrationSolvent=When concentration is entered, solvent
+createAliquotForm.otherRoom=Other Room
+createAliquotForm.otherFreezer=Other Freezer
+createAliquotForm.otherShelf=Other Shelf
+createAliquotForm.otherBox=Other Box
 
 error.preCreateAliquot=Error in loading the Create Aliquot page: {0}.
 message.createAliquot=You've successfully created the following aliquots.
@@ -66,7 +70,10 @@ editAliquotForm.concentrationUnit=The container concentration unit
 editAliquotForm.volumeUnit=The container volume unit
 editAliquotForm.solventConcentration=When solvent is entered, concentration
 editAliquotForm.concentrationSolvent=When concentration is entered, solvent
-
+editAliquotForm.otherRoom=Other Room
+editAliquotForm.otherFreezer=Other Freezer
+editAliquotForm.otherShelf=Other Shelf
+editAliquotForm.otherBox=Other Box
 error.preEditAliquot=Error in bringing up the Edit Aliquot page: {0}.
 error.preEditAliquot.nomatrix=Error in bringing up the Edit Aliquot page: {0}.
 error.editAliquot=Error in saving the edited aliquot information: {0}.
