--- a/build.properties
+++ b/build.properties
@@ -1,17 +1,3 @@
-# NCICB DEV
-database.jndi.name=caNanoLab-dev
-hostname=cbiovdev5019:49080/caNanoLab
-contextPath=calab
-file.repository.dir=/local/content/calab
-
-#staging
-#database.jndi.name=calab-staging
-#hostname=calabdev.abcc.ncifcrf.gov:8080
-#contextPath=calab
-#file.repository.dir=/home/calab.abcc/data
-
-#production
-#database.jndi.name=calab
-#hostname=calab.abcc.ncifcrf.gov:8080
-#contextPath=calab
-#file.repository.dir=/home/calab.abcc/data
+database.jndi.name=
+hostname=
+file.repository.dir=
