--- a/src/fileupload.properties
+++ b/src/fileupload.properties
@@ -1,6 +1,6 @@
 # For File input and output
 # Directory for storing caNanoLab data files 
-fileRepositoryDir=C:\\temp\\caNanoLab\\fileupload\\
+fileRepositoryDir=C:\\temp\\caNanoLab\\fileupload
 # Directory for storing caNanoLab files
 
 #Directory for storing uploaded particle files
