--- a/fileupload.properties.template
+++ b/fileupload.properties.template
@@ -1,10 +1,7 @@
 # For File input and output
 # Directory for storing caLAB data files 
 #fileRepositoryDir=C:\\temp\\caNanoLab\\fileupload\\
-fileRepositoryDir=@FILE_REPOSITORY_DIR@/workflowdata
-
-# Directory for storing caLAB files
-particleFileRepositoryDir=@FILE_REPOSITORY_DIR@
+fileRepositoryDir=@FILE_REPOSITORY_DIR@
 
 # Properties for HTTP-based file upload 
 archiveValue=http://@HOSTNAME@/workflow/SignedHttpUploadApplet.jar
