--- a/src/gov/nih/nci/calab/resources/workflow.properties
+++ b/src/gov/nih/nci/calab/resources/workflow.properties
@@ -39,4 +39,6 @@ error.fileDownload.nofile=Error in downloading the file: {0}.
 error.fileDownload=Error in downloading the file: {0}. 
 error.fileUpload=Error in uploading files: {0}.
 error.runFileMask=Error in masking files: {0}.  
+
+error.workflowMessage=An error in executing worklow: {0}.
    
