--- a/caNanoLab.properties
+++ b/caNanoLab.properties
@@ -1,2 +1,3 @@
 samplePrefix=NCICB-
 applicationOwner=NCICB
+gridIndexServiceURL=http://cagrid-index.nci.nih.gov:8080/wsrf/services/DefaultIndexService
