refactored search sample, search aliquot to inventory and search workflow to workflow
SVN-Revision: 9599

--- a/gov/nih/nci/calab/resources/workflow.properties
+++ b/gov/nih/nci/calab/resources/workflow.properties
@@ -41,4 +41,11 @@ error.fileUpload=Error in uploading files: {0}.
 error.runFileMask=Error in masking files: {0}.  
 
 error.workflowMessage=An error in executing worklow: {0}.
+
+searchWorkflowForm.assayRunDateBegin=Begin assay run date
+searchWorkflowForm.assayRunDateEnd=End assay run date
+searchWorkflowForm.fileSubmissionDateBegin=Begin file submission date
+searchWorkflowForm.fileSubmissionDateEnd=End file submission date
+error.searchWorkflow=Error during searching workflow: {0}.
+message.searchWorkflow.noResult=No search results were found for given search criteria.
    
