--- a/src/gov/nih/nci/calab/resources/search.properties
+++ b/src/gov/nih/nci/calab/resources/search.properties
@@ -9,9 +9,11 @@ errors.float={0} must be a float number.
 error.searchNanoparticle=Error in seaching nanoparticle metadata: {0}
 message.searchNanoparticle.secure=You have access to the {0} particles out of total {1} particles for particle type {2}.
 message.searchNanoparticle.noresult=No nanoparticles were found for the given parameters
+message.searchNanoparticle.grid.notAvailable={0} Grid node is not available: {1}.
 
 error.searchNanoparticleAvanced=Error in advanced seaching nanoparticle metadata: {0}
 message.searchNanoparticleAdvanced.noresult=No nanoparticles were found for the given parameters during advanced search.
 
 error.searchReport=Error in seaching report data: {0}
 message.searchReport.noresult=No reports were found for the given parameters
+message.searchReport.grid.notAvailable={0} Grid node is not available: {1}.
