--- a/gov/nih/nci/calab/resources/search.properties
+++ b/gov/nih/nci/calab/resources/search.properties
@@ -17,3 +17,4 @@ message.searchNanoparticleAdvanced.noresult=No nanoparticles were found for the 
 error.searchReport=Error in seaching report data: {0}
 message.searchReport.noresult=No reports were found for the given parameters
 message.searchReport.grid.notAvailable={0} grid node is not available: {1}.
+message.grid.discovery=Error in discovering grid nodes for model {0}: {1}.
