--- a/build.xml
+++ b/build.xml
@@ -70,22 +70,25 @@
 				<include name="*.template" />
 			</fileset>
 			<filterset>
-
-				<filter token="JNDINAME" value="${database.jndi.name}" />
-
 				<filter token="HOSTNAME" value="${hostname}" />
-
 				<filter token="FILE_REPOSITORY_DIR" value="${file.repository.dir}" />				
 			</filterset>
 		</copy>
-		<move file="${build.classes.dir}/orm1.cfg.xml.template" tofile="${build.classes.dir}/orm1.cfg.xml" />
 		<move file="${build.classes.dir}/fileupload.properties.template" tofile="${build.classes.dir}/fileupload.properties" />
 
 		<!-- Pack WAR file -->
 		<war destfile="${build.webroot.dir}/war/caNanoLab.war" webxml="${build.webinf.dir}/web.xml" basedir="${build.webroot.dir}" compress="true" />
 		<copy todir="${build.webroot.dir}/war">
 			<fileset dir="conf/csm/">
-				<include name="*.war" />
+				<include name="*.*" />
+			</fileset>
+			<fileset dir="conf/sdk/">
+				<include name="*.*" />
+			</fileset>
+		</copy>
+		<copy todir="${build.webroot.dir}/war">
+			<fileset dir="conf/">
+		 		<include name="oracle-ds.xml" />
 			</fileset>
 		</copy>
 	</target>
