--- a/src/hibernate.properties
+++ b/src/hibernate.properties
@@ -111,7 +111,7 @@ hibernate.proxool.pool_alias pool1
 
 ## print all generated SQL to the console
 
-hibernate.show_sql true
+hibernate.show_sql false
 
 
 ## add comments to the generated SQL
