--- a/src/gov/nih/nci/calab/resources/search.properties
+++ b/src/gov/nih/nci/calab/resources/search.properties
@@ -15,6 +15,7 @@ error.searchNanoparticleAvanced=Error in advanced seaching nanoparticle metadata
 message.searchNanoparticleAdvanced.noresult=No nanoparticles were found for the given parameters during advanced search.
 
 error.searchReport=Error in seaching report data: {0}
+error.searchProtocol=Error in seaching protocol data: {0}
 message.searchReport.noresult=No reports were found for the given parameters
 message.searchReport.grid.notAvailable={0} grid node is not available: {1}.
 message.grid.discovery=Error in discovering grid nodes for model {0}: {1}.
