Added messages for protocol submission
SVN-Revision: 9737

--- a/gov/nih/nci/calab/resources/submit.properties
+++ b/gov/nih/nci/calab/resources/submit.properties
@@ -11,6 +11,7 @@ message.createNanoparticle.secure=Selected particles have been successfully assi
 error.nanoparticle.generalInfo=Error in getting the nanoparticle general info: {0}
 
 error.submitReport=Error in submiting the report: {0}
+error.submitProtocol=Error in submiting the protocol: {0}
 message.submitReport.secure=Uploaded report has been sucessfully assigned to be visibile for groups: {0}
 message.submitReport.file=The report {0} has been succesfully uploaded.
 message.updateReport=You have successfully updated meta data for report: {0}.
