--- a/src/gov/nih/nci/calab/resources/submit.properties
+++ b/src/gov/nih/nci/calab/resources/submit.properties
@@ -29,6 +29,13 @@ publishReportForm.reportType=Report Type
 publishReportForm.reportFile=Report File
 publishReportForm.title=Title
 
+submitProtocolForm.protocolName=Protocol Name
+submitProtocolForm.protocolType=Protocol Type
+submitProtocolForm.protocolVersion=Protocol Version
+message.submitProtocol.secure=The protocol has been sucessfully assigned to be visibile for groups: {0}
+message.submitProtocol.file=The protocol {0} has been succesfully submitted.
+message.submitProtocol.nameVersionConflict=The protocol with the same name and version already exists.
+
 characterizationSource=Characterization Source
 viewTitle=View Title
 numberOfDerivedBioAssayData=Number of Histograms/Charts
