--- a/.classpath
+++ b/.classpath
@@ -127,5 +127,6 @@
 	<classpathentry kind="lib" path="web/WEB-INF/lib/xalan.jar"/>
 	<classpathentry kind="lib" path="web/WEB-INF/lib/xercesImpl.jar"/>
 	<classpathentry kind="lib" path="web/WEB-INF/lib/xmlsec.jar"/>
+	<classpathentry kind="lib" path="lib/servlet.jar"/>
 	<classpathentry kind="output" path="web/WEB-INF/classes"/>
 </classpath>
