--- a/src/gov/nih/nci/calab/resources/search.properties
+++ b/src/gov/nih/nci/calab/resources/search.properties
@@ -17,6 +17,7 @@ message.searchNanoparticleAdvanced.noresult=No nanoparticles were found for the 
 error.searchReport=Error in seaching report data: {0}
 error.searchProtocol=Error in seaching protocol data: {0}
 message.searchReport.noresult=No reports were found for the given parameters
+message.searchProtocol.noresult=No protocols were found for the given parameters
 message.searchReport.grid.notAvailable={0} grid node is not available: {1}.
 message.grid.discovery=Error in discovering grid nodes for model {0}: {1}.
 message.grid.discovery.none=No grid nodes were found for model {0}.
