Added messages for protocol update.
SVN-Revision: 9867

--- a/gov/nih/nci/calab/resources/submit.properties
+++ b/gov/nih/nci/calab/resources/submit.properties
@@ -12,6 +12,7 @@ error.nanoparticle.generalInfo=Error in getting the nanoparticle general info: {
 
 error.submitReport=Error in submiting the report: {0}
 error.submitProtocol=Error in submiting the protocol: {0}
+error.updateProtocol=Error in updating the protocol: {0}
 message.submitReport.secure=Uploaded report has been sucessfully assigned to be visibile for groups: {0}
 message.submitReport.file=The report {0} has been succesfully uploaded.
 message.updateReport=You have successfully updated meta data for report: {0}.
@@ -35,6 +36,7 @@ submitProtocolForm.protocolVersion=Protocol Version
 message.submitProtocol.secure=The protocol has been sucessfully assigned to be visibile for groups: {0}
 message.submitProtocol.file=The protocol {0} has been succesfully submitted.
 message.submitProtocol.nameVersionConflict=The protocol with the same name and version already exists.
+message.updateProtocol=You have successfully updated meta data for protocol: {0}.
 
 characterizationSource=Characterization Source
 viewTitle=View Title
