--- a/src/gov/nih/nci/calab/resources/submit.properties
+++ b/src/gov/nih/nci/calab/resources/submit.properties
@@ -13,7 +13,7 @@ error.nanoparticle.generalInfo=Error in getting the nanoparticle general info: {
 error.submitReport=Error in submiting the report: {0}
 error.submitProtocol=Error in submiting the protocol: {0}
 error.updateProtocol=Error in updating the protocol: {0}
-message.submitReport.secure=Uploaded report has been sucessfully assigned to be visibile for groups: {0}
+message.submitReport.secure=Uploaded report has been sucessfully assigned to be visible for groups: {0}
 message.submitReport.file=The report {0} has been succesfully uploaded.
 message.updateReport=You have successfully updated meta data for report: {0}.
 error.updateReport=Error in updating the report: {0}
@@ -33,7 +33,7 @@ publishReportForm.title=Title
 submitProtocolForm.protocolName=Protocol Name
 submitProtocolForm.protocolType=Protocol Type
 submitProtocolForm.protocolVersion=Protocol Version
-message.submitProtocol.secure=The protocol has been sucessfully assigned to be visibile for groups: {0}
+message.submitProtocol.secure=The protocol has been sucessfully assigned to be visible for groups: {0}
 message.submitProtocol.file=The protocol {0} has been succesfully submitted.
 message.submitProtocol.nameVersionConflict=The protocol with the same name and version already exists.
 message.updateProtocol=You have successfully updated meta data for protocol: {0}.
