updated message keys for nanparticleCharacterizationForm
SVN-Revision: 9932

--- a/gov/nih/nci/calab/resources/submit.properties
+++ b/gov/nih/nci/calab/resources/submit.properties
@@ -43,32 +43,17 @@ viewTitle=View Title
 numberOfDerivedBioAssayData=Number of Histograms/Charts
 numberOfDataPoints=Number of Data Points
 numberOfConditions=Number of Conditions
-otherInstrumentType=Other Instrument Type
-otherManufacturer=Other Manufacturer
-
 type=Type
-
-otherType=Other Type
 
 nanoparticleCompositionForm.carbonNanotube.growthDiameter=Growth Diameter
 nanoparticleCompositionForm.carbonNanotube.averageLength=Average Length
 
 nanoparticleCompositionForm.dendrimer.generation=Generation
-nanoparticleCompositionForm.dendrimer.surfaceGroupOtherName=Other Surface Group Name
-
 nanoparticleCompositionForm.emulsion.polymerName=Polymer Name
-
 nanoparticleCompositionForm.liposome.polymerName=Polymer Name 
 
-nanoparticleCompositionForm.polymer.otherInitiator= Other Initiator
-
 nanoparticleCompositionForm.fullerene.numberOfCarbon=Number of Carbon
-
 nanoparticleCompositionForm.polymer.crosslinkDegree=Crosslink Degree
-
-nanoparticleCompositionForm.dendrimer.otherBranch = Other Branch
-
-nanoparticleCompositionForm.dendrimer.otherGeneration = Other Generation
 
 loadDerivedBioAssayDataForm.title=Assay Result File Title
 loadDerivedBioAssayDataForm.file=Assay Result File
@@ -76,19 +61,14 @@ error.loadDerivedBioAssayData=Error in loading characterization file: {0}
 error.updateDerivedBioAssayData=Error in updating meta data for characterization file: {0}
 message.updateDerivedBioAssayData=You've successfully updated meta data for characterization file: {0}.
 
-nanoparticleSurfaceForm.numberOfSurfaceChemistries=Number of Surface Chemistries
-nanoparticleSurfaceForm.numberOfMolecules=Number of Molecules
-
-nanoparticleSolubilityForm.criticalConcentrationValue=Critical Concentration value
-
-nanoparticleSurfaceForm.chargeValue=Charge value
-nanoparticleSurfaceForm.zetaPotentialValue=Zeta Potential value
-nanoparticleSurfaceForm.surfaceAreaValue=Surface Area value
-
-nanoparticleShapeForm.minDimension=Minimum Dimension value
-nanoparticleShapeForm.maxDimension=Maximum Dimension value
-
-invitroCytotoxicityCellViabilityForm.otherCellLine=Other Cell Line 
+surface.numberOfSurfaceChemistries=Number of Surface Chemistries
+surface.numberOfMolecules=Number of Molecules
+surface.chargeValue=Charge value
+surface.zetaPotentialValue=Zeta Potential value
+surface.surfaceAreaValue=Surface Area value
+solubility.criticalConcentrationValue=Critical Concentration value
+shape.minDimension=Minimum Dimension value
+shape.maxDimension=Maximum Dimension value
 
 message.addParticleSize=You've successfully added the size characterization data.
 error.addParticleSize=Error in saving size characterization data: {0}
