--- a/src/gov/nih/nci/calab/resources/submit.properties
+++ b/src/gov/nih/nci/calab/resources/submit.properties
@@ -69,6 +69,7 @@ surface.surfaceAreaValue=Surface Area value
 solubility.criticalConcentrationValue=Critical Concentration value
 shape.minDimension=Minimum Dimension value
 shape.maxDimension=Maximum Dimension value
+shape.type=Shape Type
 
 message.addParticleSize=You've successfully added the size characterization data.
 error.addParticleSize=Error in saving size characterization data: {0}
