--- a/src/caNanoLab.properties
+++ b/src/caNanoLab.properties
@@ -1,3 +1,3 @@
-samplePrefix=NCICB-
-applicationOwner=NCICB
+samplePrefix=NCL-
+applicationOwner=NCL
 gridIndexServiceURL=http://cagrid-index.nci.nih.gov:8080/wsrf/services/DefaultIndexService
