--- a/gov/nih/nci/calab/resources/submit.properties
+++ b/gov/nih/nci/calab/resources/submit.properties
@@ -156,3 +156,5 @@ message.addparticle.function=You've successfully added function data.
 error.addparticle.function=Error in saving function data: {0}
 function.numberOfLinkages=Number of Linkages
 function.numberOfAgentTargets=Number of Agent Targets
+
+message.delete.characterization=You've successfully deleted the characterization data.
