added instrument validation messages
SVN-Revision: 10093

--- a/gov/nih/nci/calab/resources/submit.properties
+++ b/gov/nih/nci/calab/resources/submit.properties
@@ -55,6 +55,9 @@ nanoparticleCompositionForm.liposome.polymerName=Polymer Name
 nanoparticleCompositionForm.fullerene.numberOfCarbon=Number of Carbon
 nanoparticleCompositionForm.polymer.crosslinkDegree=Crosslink Degree
 
+achar.instrument.type=When manufacturer or descriptions are entered, instrument Type
+achar.instrument.manufacturer=When instrument type is entered, manufacturer
+
 loadDerivedBioAssayDataForm.title=Assay Result File Title
 loadDerivedBioAssayDataForm.file=Assay Result File
 error.loadDerivedBioAssayData=Error in loading characterization file: {0}
