updated validation message for instrument
SVN-Revision: 10098

--- a/gov/nih/nci/calab/resources/submit.properties
+++ b/gov/nih/nci/calab/resources/submit.properties
@@ -55,7 +55,7 @@ nanoparticleCompositionForm.liposome.polymerName=Polymer Name
 nanoparticleCompositionForm.fullerene.numberOfCarbon=Number of Carbon
 nanoparticleCompositionForm.polymer.crosslinkDegree=Crosslink Degree
 
-achar.instrument.type=When manufacturer or descriptions are entered, instrument Type
+achar.instrument.type=When description is entered for instrument configuration, instrument type
 achar.instrument.manufacturer=When instrument type is entered, manufacturer
 
 loadDerivedBioAssayDataForm.title=Assay Result File Title
@@ -73,6 +73,7 @@ solubility.criticalConcentrationValue=Critical Concentration value
 shape.minDimension=Minimum Dimension value
 shape.maxDimension=Maximum Dimension value
 shape.type=Shape Type
+morphology.type=Morphology Type
 
 message.addParticleSize=You've successfully added the size characterization data.
 error.addParticleSize=Error in saving size characterization data: {0}
