--- a/build.properties
+++ b/build.properties
@@ -1,3 +1,5 @@
-database.jndi.name=
-hostname=
-file.repository.dir=
+hostname=cananolab-dev.nci.nihi.gov/caNanoLab
+file.repository.dir=/local/content/caNanoLab
+sample.prefix=NCL
+application.owner=NCL
+grid.indexserver=cagrid-index-qa.nci.nih.gov:8080
