updated message key for shape and morphology
SVN-Revision: 3483

--- a/src/gov/nih/nci/calab/resources/submit.properties
+++ b/src/gov/nih/nci/calab/resources/submit.properties
@@ -68,6 +68,16 @@ message.updateDerivedBioAssayData=You've successfully updated meta data for char
 
 nanoparticleSurfaceForm.numberOfSurfaceChemistries=Number of Surface Chemistries
 nanoparticleSurfaceForm.numberOfMolecules=Number of Molecules
+surface.numberOfSurfaceChemistries=Number of Surface Chemistries
+surface.numberOfMolecules=Number of Molecules
+surface.chargeValue=Charge value
+surface.zetaPotentialValue=Zeta Potential value
+surface.surfaceAreaValue=Surface Area value
+solubility.criticalConcentrationValue=Critical Concentration value
+shape.minDimension=Minimum Dimension value
+shape.maxDimension=Maximum Dimension value
+shape.type=Shape Type
+morphology.type=Morphology Type
 
 nanoparticleSolubilityForm.criticalConcentrationValue=Critical Concentration value
 
