added validation message for surface and solubility
SVN-Revision: 10370

--- a/gov/nih/nci/calab/resources/submit.properties
+++ b/gov/nih/nci/calab/resources/submit.properties
@@ -69,7 +69,9 @@ surface.numberOfMolecules=Number of Molecules
 surface.chargeValue=Charge value
 surface.zetaPotentialValue=Zeta Potential value
 surface.surfaceAreaValue=Surface Area value
+surface.chargeUnit=Charge Unit
 solubility.criticalConcentrationValue=Critical Concentration value
+solubility.criticalConcentrationUnit=Critical Concentration Unit
 shape.minDimension=Minimum Dimension value
 shape.maxDimension=Maximum Dimension value
 shape.type=Shape Type
