added message for linkageType and agentType
SVN-Revision: 10484

--- a/gov/nih/nci/calab/resources/submit.properties
+++ b/gov/nih/nci/calab/resources/submit.properties
@@ -160,7 +160,7 @@ error.addInvitroROS=Error in saving invitro ros characterization data: {0}
 
 message.addparticle.function=You've successfully added function data.
 error.addparticle.function=Error in saving function data: {0}
-function.numberOfLinkages=Number of Linkages
-function.numberOfAgentTargets=Number of Agent Targets
+function.linkageType=Linkage Type
+function.linkage.agentType=Linkage Agent Type
 
 message.delete.characterization=You've successfully deleted the characterization data.
