--- a/caNanoLab.properties
+++ b/caNanoLab.properties
@@ -1,3 +1,3 @@
 samplePrefix=NCL-
 applicationOwner=NCL
-gridIndexServiceURL=http://cagrid-index.nci.nih.gov:8080/wsrf/services/DefaultIndexService
+gridIndexServiceURL=http://cagrid-index-qa.nci.nih.gov:8080/wsrf/services/DefaultIndexService
