removed default values
SVN-Revision: 3853

--- a/build.properties
+++ b/build.properties
@@ -1,5 +1,5 @@
-hostname=cananolab-dev.nci.nihi.gov/caNanoLab
-file.repository.dir=/local/content/caNanoLab
-sample.prefix=NCL
-application.owner=NCL
-grid.indexserver=cagrid-index-qa.nci.nih.gov:8080
+hostname=
+file.repository.dir=
+sample.prefix=
+application.owner=
+grid.indexserver=
