--- a/src/gov/nih/nci/calab/resources/submit.properties
+++ b/src/gov/nih/nci/calab/resources/submit.properties
@@ -163,4 +163,6 @@ error.addparticle.function=Error in saving function data: {0}
 function.linkageType=Linkage Type
 function.linkage.agentType=Linkage Agent Type
 
+message.delete.no.characterizations=There are no characterizations to delete.
 message.delete.characterization=You've successfully deleted the characterization data.
+delete.charIds=At least one characterization
