updated inventory message
SVN-Revision: 10636

--- a/gov/nih/nci/calab/resources/inventory.properties
+++ b/gov/nih/nci/calab/resources/inventory.properties
@@ -79,12 +79,15 @@ error.preEditAliquot.nomatrix=Error in bringing up the Edit Aliquot page: {0}.
 error.editAliquot=Error in saving the edited aliquot information: {0}.
 error.editAliquot.nomatrix=Error is saving the edited aliquot information: {0}.
 
-searchSampleForm.dateAccessionedBegin=Begin sample accession date
-searchSampleForm.dateAccessionedEnd=End sample accession date
+dateAccessionedBegin=Begin sample accession date
+dateAccessionedEnd=End sample accession date
 error.searchSample=Error during searching samples: {0}.
 error.searchAliquot=Error during searching aliquots: {0}.
 message.searchSample.noResult=No search results were found for given search criteria.
 
 error.viewSampleDetails.noSamples=Error in showing sample details: {0}.
 error.viewSampleDetails=Error in showing sample details: {0}.
+
+inventory.containerId=Container Name
+inventory.aliquotId=Aliquot ID
 
