--- a/src/caNanoLab.properties
+++ b/src/caNanoLab.properties
@@ -1,3 +1,3 @@
-fileRepositoryDir=C:/temp/caNanoLab/fileupload
-applicationOwner=NCL
-gridIndexServiceURL=http://cbiovdev5012.nci.nih.gov:8080/wsrf/services/DefaultIndexService
+fileRepositoryDir=
+applicationOwner=
+gridIndexServiceURL=
