added grid.service.hostname property
SVN-Revision: 5936

--- a/grid.properties
+++ b/grid.properties
@@ -1,4 +1,5 @@
 #CaNanoLabService Deployment Properties
+grid.service.hostname=cananolab.nci.nih.gov
 grid.service.port=8080
 # CaNanoLabService metadata used for auto-discovery
 country=US
