--- a/build.properties
+++ b/build.properties
@@ -1,5 +1,3 @@
 file.repository.dir=C:/temp/caNanoLab/fileupload
-application.owner=NCICB
-grid.indexserver=http://index.training.cagrid.org:8080/wsrf/services/DefaultIndexService
-#production version
-#grid.indexserver=http://cagrid-index.nci.nih.gov:8080/wsrf/services/DefaultIndexService 
+application.owner=SuePC
+grid.indexserver=http://cbiovdev5012.nci.nih.gov:8080/wsrf/services/DefaultIndexService
