updated message for derived data value
SVN-Revision: 12792

--- a/gov/nih/nci/cananolab/resources/particle.properties
+++ b/gov/nih/nci/cananolab/resources/particle.properties
@@ -5,9 +5,9 @@ errors.integer={0} must be an integer number.
 errors.range={0} must be an integer number between {1} and {2}.
 errors.date={0} must be a date in the format of MM/dd/yyyy.
 errors.float={0} must be a float number.
-errors.nonzerofloat={0} must be a non-zero float number.
-error.booleanValue={0}  must be 'true'/'false'.
+error.booleanValue={0}  must be 'true'/'false' or '0'/'1'.
 
+error.derivedDatumValue={0} must be a float number or true/false for value type of boolean.
 error.particle=Nanoparticle Sample Error: {0}
 error.composition=Nanoparticle Sample Composition Error: {0}
 error.characterization=Nanoparticle Sample Characterization Error: {0}
@@ -68,13 +68,13 @@ error.nullComposingElementAInAssociation=Choosing a composing element on the lef
 error.nullComposingElementBInAssociation=Choosing a composing element on the right is required.
 
 nanoparticleEntityType=Nanoparticle Entity Type
-nanoparticleEntityForm.carbonNanotube.diameter=Carbon Nanotube Diameter
-nanoparticleEntityForm.carbonNanotube.averageLength=Carbon Nanotube Average Length
-nanoparticleEntityForm.fullerene.numberOfCarbon=Fullerene Number of Carbons
+nanoparticleEntityForm.carbonNanotube.diameter=Diameter
+nanoparticleEntityForm.carbonNanotube.averageLength=Average Length
+nanoparticleEntityForm.fullerene.numberOfCarbon=Number of Carbon
 nanoparticleEntityForm.biopolymer.name=Biopolymer Name
 nanoparticleEntityForm.biopolymer.type=Biopolymer Type
-nanoparticleEntityForm.liposome.polymerName=When Is Polymerized is Yes, Polymer Name
-nanoparticleEntityForm.emulsion.polymerName=When Is Polymerized is Yes, Polymer Name
+nanoparticleEntityForm.liposome.polymerName=Polymer Name 
+nanoparticleEntityForm.emulsion.polymerName=Polymer Name
 nanoparticleEntityForm.polymer.crossLinkDegree=Polymer Cross Link Degree
 nanoparticleEntityForm.elementType=Composing Element Type
 nanoparticleEntityForm.elementName=Composing Element Chemical Name
@@ -82,7 +82,7 @@ nanoparticleEntityForm.elementName=Composing Element Chemical Name
 functionalizingEntityType=Functionalizing Entity Type
 functionalizingEntityName=Functionalizing Entity Chemical Name
 functionalizingEntityForm.value=Functionalizing Entity Value
-functionalizingEntity.functionType=Functionalizing Entity Type
+functionalizingEntity.functionType=Functionalizing Entity Function Type
 
 
 characterizationSource=Characterization Source
@@ -91,22 +91,9 @@ numberOfDerivedBioAssayData=Number of Histograms/Charts
 numberOfDataPoints=Number of Data Points
 numberOfConditions=Number of Conditions
 type=Type
-nanoparticleEntityType = Nanoparticle Entity Type
-functionalizingEntityType = Functionalizing Entity Type
-functionalizingEntityName = Functionalizing Entity Chemical Name
-
-nanoparticleEntityForm.carbonNanotube.diameter=Diameter
-nanoparticleEntityForm.carbonNanotube.averageLength=Average Length
 
 nanoparticleEntityForm.dendrimer.generation=Generation
-nanoparticleEntityForm.emulsion.polymerName=Polymer Name
-nanoparticleEntityForm.liposome.polymerName=Polymer Name 
-
-nanoparticleEntityForm.fullerene.numberOfCarbon=Number of Carbon
 nanoparticleEntityForm.polymer.crosslinkDegree=Crosslink Degree
-
-functionalizingEntityForm.value=Functionalizing Entity Value
-functionalizingEntity.functionType=Functionalizing Entity Function Type
 
 achar.instrument.type=When description is entered for instrument configuration, instrument type
 achar.instrument.manufacturer=When instrument type is entered, manufacturer
