--- a/src/gov/nih/nci/cananolab/resources/document.properties
+++ b/src/gov/nih/nci/cananolab/resources/document.properties
@@ -8,11 +8,10 @@ errors.float={0} must be a float number.
 
 message.submitPublication.file=The document {0} has been successfully submitted.
 submitPublicationForm.particleID=Particle ID
-submitPublicationForm.documentType=Document Type
-submitPublicationForm.documentFile=Uploading a file
-submitPublicationForm.externalUrl=Entering a URL
 submitPublicationForm.particleNames=Nanoparticle Sample Name
-submitPublicationForm.file.category=Document File Category
+submitPublicationForm.authors=Authors
+submitPublicationForm.file.category=Publication Type
+submitPublicationForm.file.status=Publication Status
 document.title=Title
 document.title.invalid=Document title can not contain special characters.
 document.particleType.invalid=Particle Type can not contain special characters.
