--- a/gov/nih/nci/cananolab/resources/particle.properties
+++ b/gov/nih/nci/cananolab/resources/particle.properties
@@ -51,6 +51,7 @@ message.addInvitroCharacterization=You've successfully added in vitro characteri
 message.deletePhysicalCharacterization=You've successfully deleted the physical characterization.
 message.deleteInvitroCharacterization=You've successfully deleted the in vitro characterization.
 message.submitReport.file=The report {0} has been successfully updated.
+message.submitPublication.file=The publication {0} has been successfully updated.
 nanoparticleGeneralInfoForm.particleType=Particle Type
 nanoparticleGeneralInfoForm.particleID=Particle ID
 nanoparticleGeneralInfoForm.visibilities=Visibility
