--- a/gov/nih/nci/cananolab/resources/document.properties
+++ b/gov/nih/nci/cananolab/resources/document.properties
@@ -9,9 +9,9 @@ errors.float={0} must be a float number.
 message.submitPublication.file=The document {0} has been successfully submitted.
 submitPublicationForm.particleID=Particle ID
 submitPublicationForm.particleNames=Nanoparticle Sample Name
-submitPublicationForm.authors=Authors
 submitPublicationForm.file.category=Publication Type
 submitPublicationForm.file.status=Publication Status
+submitPublicationForm.file.researchArea=Research Category
 document.title=Title
 document.title.invalid=Document title can not contain special characters.
 document.particleType.invalid=Particle Type can not contain special characters.
