--- a/gov/nih/nci/cananolab/resources/report.properties
+++ b/gov/nih/nci/cananolab/resources/report.properties
@@ -6,6 +6,7 @@ errors.range={0} must be an integer number between {1} and {2}.
 errors.date={0} must be a date in the format of MM/dd/yyyy.
 errors.float={0} must be a float number.
 
+message.deleteDocuments=You've successfully deleted the {0} data.
 message.submitReport.file=The report {0} has been successfully submitted.
 submitReportForm.particleID=Particle ID
 submitReportForm.reportType=Report Type
