add titled as to publication/report updated message
SVN-Revision: 12978

--- a/gov/nih/nci/cananolab/resources/particle.properties
+++ b/gov/nih/nci/cananolab/resources/particle.properties
@@ -51,8 +51,8 @@ message.addPhysicalCharacterization=You've successfully added physical character
 message.addInvitroCharacterization=You've successfully added in vitro characterization data.
 message.deletePhysicalCharacterization=You've successfully deleted the physical characterization.
 message.deleteInvitroCharacterization=You've successfully deleted the in vitro characterization.
-message.submitReport.file=The report {0} has been successfully updated.
-message.submitPublication.file=The publication {0} has been successfully updated.
+message.submitReport.file=The report, titled as, {0}, has been successfully updated.
+message.submitPublication.file=The publication , titled as, {0},  has been successfully updated.
 nanoparticleGeneralInfoForm.particleType=Particle Type
 nanoparticleGeneralInfoForm.particleID=Particle ID
 nanoparticleGeneralInfoForm.visibilities=Visibility
