--- a/build.properties
+++ b/build.properties
@@ -1,4 +1,4 @@
-file.repository.dir=C:/temp/caNanoLab/fileupload
+file.repository.dir=C:/caNanoLab/fileupload
 application.owner=NCICB
 grid.indexserver=http://index.training.cagrid.org:8080/wsrf/services/DefaultIndexService
 #production version
