add error message for invalid composition type
SVN-Revision: 13081

--- a/gov/nih/nci/cananolab/resources/particle.properties
+++ b/gov/nih/nci/cananolab/resources/particle.properties
@@ -6,6 +6,7 @@ errors.range={0} must be an integer number between {1} and {2}.
 errors.date={0} must be a date in the format of MM/dd/yyyy.
 errors.float={0} must be a float number.
 error.booleanValue={0}  must be 'true'/'false' or '0'/'1'.
+errors.invalidOtherType='{0}' is an invalid {1} type. It is a pre-defined composition type.
 
 error.derivedDatumValue={0} must be a float number or true/false for value type of boolean.
 error.particle=Nanoparticle Sample Error: {0}
